@@ -227,10 +227,11 @@ foreach(_i 00 01 02 03 04 05 06)
                   BUILD ${SRCDIR}/extended/hadronic/Hadr${_i})
 endforeach()
 
-configure_file(${CTEST_SOURCE_DIRECTORY}/examples/extended/medical/DICOM/Data.dat ${CTEST_BINARY_DIRECTORY}/examples/extended/medical/DICOM/Data.dat)
-GEANT4_ADD_TEST(example-ext-medical-dicom 
-                COMMAND ${BINDIR}/DICOM ${SRCDIR}/extended/medical/DICOM/run.mac
-                BUILD ${SRCDIR}/extended/medical/DICOM)
+#configure_file(${CTEST_SOURCE_DIRECTORY}/examples/extended/medical/DICOM/Data.dat ${CTEST_BINARY_DIRECTORY}/examples/extended/medical/DICOM/Data.dat)
+#GEANT4_ADD_TEST(example-ext-medical-dicom 
+#                COMMAND ${BINDIR}/DICOM ${SRCDIR}/extended/medical/DICOM/run.mac
+#                BUILD ${SRCDIR}/extended/medical/DICOM)
+
 #GEANT4_ADD_TEST(example-ext-medical-electronScattering 
 #                COMMAND ${CMAKE_BINARY_DIR}/examples/extended/medical/electronScattering/electronScattering
 #                        ${SRCDIR}/extended/medical/electronScattering/electronScattering.in
@@ -275,11 +276,11 @@ endforeach()
 #                        -mac ${DNA_EXAMPLE_SRC_DIR}/wholeNuclearDNA/wholeNuclearDNA.in
 #                BUILD ${DNA_EXAMPLE_SRC_DIR}/wholeNuclearDNA)
 
-configure_file(${CTEST_SOURCE_DIRECTORY}examples/extended/medical/dna/pdb4dna/pdb4dna.in ${CTEST_BINARY_DIRECTORY}examples/extended/medical/dna/pdb4dna/pdb4dna.in)
-GEANT4_ADD_TEST(example-ext-medical-dna-pdb4dna
-                COMMAND ${BINDIR}/pdb4dna
-                        -mac ${DNA_EXAMPLE_SRC_DIR}/pdb4dna/pdb4dna.in
-                BUILD ${DNA_EXAMPLE_SRC_DIR}/pdb4dna)
+#configure_file(${CTEST_SOURCE_DIRECTORY}examples/extended/medical/dna/pdb4dna/pdb4dna.in ${CTEST_BINARY_DIRECTORY}examples/extended/medical/dna/pdb4dna/pdb4dna.in)
+#GEANT4_ADD_TEST(example-ext-medical-dna-pdb4dna
+#                COMMAND ${BINDIR}/pdb4dna
+#                        -mac ${DNA_EXAMPLE_SRC_DIR}/pdb4dna/pdb4dna.in
+#                BUILD ${DNA_EXAMPLE_SRC_DIR}/pdb4dna)
 
 GEANT4_ADD_TEST(example-ext-optical-opnovice 
                 COMMAND ${BINDIR}/OpNovice -m ${SRCDIR}/extended/optical/OpNovice/OpNovice.in
